Fixed resume timeline alignment

--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -7,7 +7,7 @@
 
   content: "";
   top: 1.25rem;
-  left: -2.55rem;
+  left: -1.2rem;
   border-left: 1px dashed;
 }
 
@@ -20,7 +20,7 @@
 
   content: "";
   top: 5px;
-  left: -3rem;
+  left: -1.65rem;
   width: 1rem;
   height: 1rem;
 }
